--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Testing for VBBK
-description: This is a testing ground for a future VBBK site.
+title: Vincent Buchan Bookkeeping
+description: We take the anxiety out of your bookkeeping!
