--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: cayman
 title: Vincent Buchan Bookkeeping
 description: We take the anxiety out of your bookkeeping!
